[build-system]
requires      = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
[project]
name        = "zodiac"
version     = "0.0.1"
description = "Multimodal generative media sequencer"
readme      = "README.md"

requires-python = ">=3.11"
dependencies = [
    "dspy>=2.6.13",
    "huggingface-hub[hf-transfer,hf-xet]>=0.32.3",
    "litellm>=1.67.1",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "sounddevice>=0.5.1",
    "textual-dev>=1.7.0",
    "textual-plotext>=1.0.1",
    "textual[syntax]>=3.1.1",
    "tiktoken>=0.9.0",
    "viztracer>=1.0.3",
    "mir @ git+https://github.com/darkshapes/mir@main",
    "nnll @ git+https://github.com/darkshapes/nnll@main",
    "soundfile>=0.13.1",
]


[project.scripts]
zodiac = "zodiac.__init__:main"
astra  = "astra.__init__:main"

[project.urls]
Homepage = "https://github.com/darkshapes/zodiac"

[project.optional-dependencies]
dev = ["pytest>=8.3.5", "pytest-asyncio>=0.26.0", "ruff>=0.11.6"]
ollama = ["ollama>=0.5.1"]
lmstudio = ["lmstudio>=1.3.1"]
vllm = [
    "vllm>=0.9.0.1 ; platform_system == 'linux' or platform_system == 'windows'",
]
cortex = ["openai>=1.82.1"]
llamafile = ["openai>=1.82.1"]
full = ["zodiac[ollama,lmstudio,hub,vllm,cortex,llamafile]"]


[dependency-groups]
dev = [
    "matplotlib>=3.10.1",
    "pytest-asyncio>=0.26.0",
    "pytest>=8.3.5",
    "ruff>=0.11.6",
    "tiktoken>=0.9.0",
    "zodiac[full]",
]

[tool.setuptools]
packages = ["zodiac"]

[tool.ruff]
line-length    = 140
include        = ["*.py"]
extend-exclude = ["^tests/.*$", "test.*$"]

# [tool.ruff.format]
# exclude = ["*.py"]

[tool.pylint]
max-line-length = 140
ignore-paths    = ["^tests/.*$", "test_.*$"]
disable         = ["C0415"]

[tool.ruff.lint.pycodestyle]
max-line-length               = 140
ignore-overlong-task-comments = true

[tool.typos]
files.extend-exclude = ["^tests/.*$", "test.*$"]
default.extend-words = { "ot" = "ot" }

[tool.uv.sources]
nnll = { git = "https://github.com/darkshapes/nnll", rev = "main" }
mir  = { git = "https://github.com/darkshapes/mir", rev = "main" }
