[build-system]
requires      = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]

authors = [
    { name = "darkshapes", email = "91800957+exdysa@users.noreply.github.com" },
]
description = "Multimodal generative media sequencer"
license = { file = "LICENSE" }
name        = "zodiac"
readme      = "README.md"
requires-python = ">=3.11"
version     = "0.0.1"
keywords = [
    "ML",
    "AI",
    "TUI",
    "no-code",
    "diffusion",
    "LLM",
    "torch",
]

dependencies    = [
    "dspy>=2.6.27",
    "litellm>=1.72.0",
    "matplotlib>=3.10.3",
    "mir>=0.0.1",
    "networkx>=3.5",
    "nnll",
    "numpy>=2.2.6",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "textual-dev>=1.7.0",
    "textual-plotext>=1.0.1",
    "textual[syntax]>=3.3.0",
    "tiktoken>=0.9.0",
    "viztracer>=1.0.4",
]

[dependency-groups]
lmstudio = [
    "lmstudio>=1.3.1",
]
ollama = [
    "ollama>=0.5.1",
]
openai = [
    "openai>=1.84.0",
]
vllm = [
    "vllm>=0.9.0.1",
]
full = ["zodiac[lmstudio,ollama,openai]"]
dev = [
    "matplotlib>=3.10.3",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.11.12",
    "zodiac[full]"
]

[project.optional-dependencies]
lmstudio = [
    "lmstudio>=1.3.1",
]
ollama = [
    "ollama>=0.5.1",
]
openai = [
    "openai>=1.84.0",
]
vllm = [
    "vllm>=0.9.0.1",
]
full = ["zodiac[lmstudio,ollama,openai]"]
dev = [
    "matplotlib>=3.10.3",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.11.12",
    "zodiac[full]"
]

[project.urls]
Homepage = "https://github.com/darkshapes/zodiac"

[project.scripts]
zodiac = "zodiac.__init__:main"
astra  = "astra.__init__:main"

[tool.setuptools]
packages = ["zodiac"]

[tool.ruff]
line-length    = 140
include        = ["*.py"]
extend-exclude = ["^tests/.*$", "test.*$"]

# [tool.ruff.format]
# exclude = ["*.py"]

[tool.pylint]
max-line-length = 140
ignore-paths    = ["^tests/.*$", "test_.*$"]
disable         = ["C0415"]

[tool.ruff.lint.pycodestyle]
max-line-length               = 140
ignore-overlong-task-comments = true

[tool.typos]
files.extend-exclude = ["^tests/.*$", "test.*$"]
default.extend-words = { "ot" = "ot" }

[tool.uv.sources]
mir = { git = "https://github.com/darkshapes/mir", rev = "main" }
nnll = { git = "https://github.com/darkshapes/nnll", rev = "main" }
