[build-system]
requires      = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]

authors = [
    { name = "darkshapes", email = "91800957+exdysa@users.noreply.github.com" },
]
description = "Multimodal generative media sequencer"
license = { file = "LICENSE" }
name = "zodiac"
readme = "README.md"
requires-python = ">=3.11"
version = "0.0.2"
keywords = ["ML", "AI", "TUI", "no-code", "diffusion", "LLM", "torch"]

classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Editors",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Multimedia :: Graphics :: Presentation",
    "Topic :: Multimedia :: Graphics :: Viewers",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Multimedia :: Sound/Audio :: Editors",
    "Topic :: Multimedia :: Sound/Audio :: Mixers",
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Capture",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Multimedia :: Video :: Display",
    "Topic :: Multimedia :: Video :: Non-Linear Editor",

]
dependencies = [
    "dspy>=2.6.27",
    "litellm>=1.72.0",
    "tokenizers==0.21.2",                                       #force for non linux
    "networkx>=3.5",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "nnll[full] @ git+https://github.com/darkshapes/nnll@main",
    "tiktoken>=0.9.0",
    "viztracer>=1.0.4",
    "matplotlib>=3.10.3",
    "toga>=0.5.1",
    "pyperclip>=1.9.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.3",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.11.12",
    "nnll[dev] @ git+https://github.com/darkshapes/nnll@main",
    "zodiac[full,console]",
]

[project.optional-dependencies]
console = [
    # "toga-textual>=0.5.1",
    "textual-dev>=1.7.0",
    "textual-plotext>=1.0.1",
    "textual[syntax]>=3.3.0",
]
toga = ["toga>=0.5.1"]
full = ["zodiac[toga]"]


dev = [
    "matplotlib>=3.10.3",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.11.12",
    "nnll[dev] @ git+https://github.com/darkshapes/nnll@main",
    "zodiac[full,console]",
]

[project.urls]
Homepage      = "https://github.com/darkshapes/zodiac"
Documentation = "https://github.com/darkshapes/sdbx/wiki"

[project.scripts]
zdac      = "zodiac.toga.__main__:main"
zdac-pool = "zodiac.providers.pools:generate_pool"
zodiac    = "zodiac.toga.__main__:main"

[tool.setuptools]
packages = ["zodiac"]

[tool.uv]
preview    = true
prerelease = "allow"

[tool.ruff]
line-length    = 140
include        = ["*.py"]
extend-exclude = ["^tests/.*$", "test.*$"]

# [tool.ruff.format]
# exclude = ["*.py"]

[tool.pylint]
max-line-length = 140
ignore-paths    = ["^tests/.*$", "test_.*$"]

[tool.pylint.messages_control]
disable = ["C0415"]

[tool.ruff.lint]
ignore = ["E731"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-line-length               = 140
ignore-overlong-task-comments = true

[tool.typos]
files.extend-exclude = ["^tests/.*$", "test.*$"]
default.extend-words = { "ot" = "ot" }

[tool.uv.sources]
nnll = { git = "https://github.com/darkshapes/nnll", rev = "main" }
